--- a/Taylr/Base.lproj/Settings.storyboard
+++ b/Taylr/Base.lproj/Settings.storyboard
@@ -23,13 +23,13 @@
         <!--Settings Form View Controller-->
         <scene sceneID="FFe-cU-HuB">
             <objects>
-                <viewController storyboardIdentifier="SettingsForm" id="oXE-PG-K0h" customClass="SettingsFormViewController" customModule="Ketch" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingsForm" id="oXE-PG-K0h" customClass="SettingsFormViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="Awr-Y8-far">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.96776443719863892" green="0.99617582559585571" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsLabelCell" id="0nO-s2-fXe" customClass="SettingsLabelCell" customModule="Ketch" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsLabelCell" id="0nO-s2-fXe" customClass="SettingsLabelCell" customModule="Taylr" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0nO-s2-fXe" id="gD4-Ze-IHD">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -52,12 +52,12 @@
                                     <outlet property="label" destination="IJy-Ux-yqE" id="pSf-bI-XT3"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsPhotoCell" rowHeight="190" id="nqV-Ay-D6d" customClass="SettingsPhotoCell" customModule="Ketch" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsPhotoCell" rowHeight="190" id="nqV-Ay-D6d" customClass="SettingsPhotoCell" customModule="Taylr" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nqV-Ay-D6d" id="l1K-FK-FTd">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" image="ib-avatar-preview" translatesAutoresizingMaskIntoConstraints="NO" id="2O8-JM-gWS" userLabel="Avatar" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
+                                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" image="ib-avatar-preview" translatesAutoresizingMaskIntoConstraints="NO" id="2O8-JM-gWS" userLabel="Avatar" customClass="UserAvatarView" customModule="Taylr" customModuleProvider="target">
                                             <rect key="frame" x="220" y="8" width="160" height="160"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="160" id="Yok-Fe-2CE"/>
@@ -84,7 +84,7 @@
                                     <outlet property="avatarView" destination="2O8-JM-gWS" id="94B-hm-X4M"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsTextCell" id="qF5-2F-xHm" customClass="SettingsTextCell" customModule="Ketch" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsTextCell" id="qF5-2F-xHm" customClass="SettingsTextCell" customModule="Taylr" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qF5-2F-xHm" id="gBE-km-oq3">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -145,7 +145,7 @@
         <!--Settings View Controller-->
         <scene sceneID="RCe-Fk-EtH">
             <objects>
-                <viewController storyboardIdentifier="Settings" id="dR1-bd-snB" customClass="SettingsViewController" customModule="Ketch" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Settings" id="dR1-bd-snB" customClass="SettingsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="O2W-Qj-guk"/>
                         <viewControllerLayoutGuide type="bottom" id="cpY-v9-sxg"/>
@@ -154,7 +154,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cv6-2X-pDR" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cv6-2X-pDR" customClass="WaveView" customModule="Taylr" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="567" width="600" height="580"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v0.1.0 (23b)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8df-8X-biN">
@@ -198,7 +198,7 @@
                                     <action selector="showLogoutOptions:" destination="dR1-bd-snB" eventType="touchUpInside" id="wks-i5-7DH"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6it-j9-jwj" userLabel="Crab Button" customClass="CrabView" customModule="Ketch" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6it-j9-jwj" userLabel="Crab Button" customClass="CrabView" customModule="Taylr" customModuleProvider="target">
                                 <rect key="frame" x="252" y="540" width="96" height="60"/>
                                 <state key="normal" image="crab">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
