--- a/Taylr/UserInterface/Profile/ProfileInfoCell.xib
+++ b/Taylr/UserInterface/Profile/ProfileInfoCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ByA-YF-yCG" customClass="ProfileInfoCell" customModule="Ketch" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ByA-YF-yCG" customClass="ProfileInfoCell" customModule="Taylr" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="232" height="25"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
